--- a/build.gradle
+++ b/build.gradle
@@ -6,5 +6,19 @@ sourceSets {
          srcDir 'src/java'
       }
    }
+   test {
+      java {
+         srcDir 'src/junit'
+      }
+   }
 }
-version = '1.3.8'
+allprojects {
+   repositories {
+      jcenter()
+   }
+}
+dependencies {
+    testCompile group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '3.+'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
+}
+version = '1.3.7'
